修改字典逻辑
